Update README with API key generation instructions; secure route handlers in route.ts; modify index.html title and description

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,2 @@
-<h1>MCP for Next.js</h1>
-
-<p>Protocol is mounted below /.</p>
-
-<p>
-  <a
-    href="https://vercel.com/templates/next.js/model-context-protocol-mcp-with-next-js"
-    >Clone template on Vercel</a
-  >
-</p>
+<h1>Monogram Development MCP Server</h1>
+<p>Protocol is mounted below /mcp.</p>
